<resources>
    <string name="app_name">Mi Evolved</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mi_logo">Mi Evolved Logo</string>
    <string name="name">Name</string>
    <string name="registration_details">Registration Details:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="mievolved">mi-evolved.tk</string>
    <string name="name_static">Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="email_address_static">Email Address:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="mei">★ MI EVOLVED INDONESIA ★</string>
    <string name="age">Age</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usia">Usia</string>
    <string name="tikwa">:</string>
    <string name="email">Email</string>
    <string name="mobile1">Mobile</string>
    <string name="nama">Nama</string>
</resources>
