<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dimz.os.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <ImageView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#b9ffffff"/>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mievolved"
                android:layout_marginBottom="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center">
        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/layoutInput"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/gradient_bg"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tet_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/bt_login"
                android:textColor="#FFF"
                android:background="@drawable/bgdimz"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="Log In"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/tv_register"
                android:textColor="#FFF"
                android:background="@drawable/bgdimz"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/don_t_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        </LinearLayout>
        <ImageView
            android:contentDescription="@string/mi_logo"
            android:id="@+id/imageView2"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mibanner"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="70dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>