<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.dimz.os.MainActivity">

    <ImageView
        android:background="@drawable/bg_main"
        android:layout_width="match_parent"
        android:layout_height="235dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="20.0dip"
                android:src="@drawable/mibanner" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:text="@string/mei"
                android:textColor="@color/text"
                android:textSize="13.5dip"
                android:textStyle="bold" />

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="110dp">

                <com.android.volley.toolbox.NetworkImageView
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/imageView"
                    android:layout_width="95.0dip"
                    android:layout_height="95.0dip"
                    android:scaleType="centerCrop" />
                <LinearLayout
                    android:layout_marginLeft="7dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="65.0dip"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_marginLeft="-10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tikwa"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:textColor="@color/text"
                            android:textSize="17dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="65.0dip"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile1"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_marginLeft="-10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tikwa"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="0"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text"
                            android:textSize="17dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="65.0dip"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_marginLeft="-10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tikwa"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:textColor="@color/text"
                            android:textSize="17dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="65.0dip"
                            android:layout_height="wrap_content"
                            android:text="@string/usia"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_marginLeft="-10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tikwa"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:textColor="@color/text"
                            android:textSize="17dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="Tahun"
                            android:textColor="@color/text"
                            android:textSize="17dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:onClick="buttondimz1"
                    android:background="#fff"
                    android:orientation="vertical">
                    <LinearLayout
                        android:paddingTop="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="43dp"
                            android:layout_height="43dp"
                            android:src="@drawable/ic_donut_small_black_24dp"/>

                        <TextView
                            android:paddingTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Browser"
                            android:textColor="@color/text"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:background="#fff"
                    android:orientation="vertical">
                    <LinearLayout
                        android:paddingTop="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_home_black_24dp"/>

                        <TextView
                            android:paddingTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:textColor="@color/text"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:background="#fff"
                    android:orientation="vertical">
                    <LinearLayout
                        android:paddingTop="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_home_black_24dp"/>

                        <TextView
                            android:paddingTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3"
                            android:textColor="@color/text"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:onClick="buttondimz2"
                    android:background="#fff"
                    android:orientation="vertical">
                   <LinearLayout
                       android:paddingTop="30dp"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:orientation="vertical"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_home_black_24dp"/>

                    <TextView
                        android:paddingTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textColor="@color/text"
                        android:textSize="15dp" />
                   </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:background="#fff"
                    android:orientation="vertical">
                    <LinearLayout
                        android:paddingTop="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_home_black_24dp"/>

                        <TextView
                            android:paddingTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:textColor="@color/text"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:background="#fff"
                    android:orientation="vertical">
                    <LinearLayout
                        android:paddingTop="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_home_black_24dp"/>

                        <TextView
                            android:paddingTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3"
                            android:textColor="@color/text"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>